@@ -202,10 +202,12 @@ DIV.TP_PanletGridHosts TD.x-grid-cell, DIV.TP_PanletGridServices TD.x-grid-cell 
 DIV.x-grid-header-ct DIV.vertical, DIV.vertical, A.vertical {
   position: relative;
   text-align: left;
-  -webkit-transform: rotate(-90deg);
-  -moz-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=-0.00000000, M12=1.00000000, M21=-1.00000000, M22=-0.00000000,sizingMethod='auto expand')";
+  -webkit-transform: rotate(-90.0deg);  /* Safari 3.1+, Chrome */
+  -moz-transform: rotate(-90.0deg);  /* Firefox 3.5-15 */
+  -ms-transform: rotate(-90.0deg);  /* IE9+ */
+  -o-transform: rotate(-90.0deg);  /* Opera 10.5-12.00 */
+  transform: rotate(-90.0deg);
 }
 DIV.x-grid-header-ct DIV.minemap_first_col {
   position: relative;
